<resources>
    <string name="app_name">AgroData</string>
    <string name="login_preference_key">com.example.gretchen.agrodata.LOGIN_FILE_KEY</string>
    <string name="id_key">UserIDKey</string>
    <string name="user_name_key">UserNameKey</string>
    <string name="list_type">TheList</string>
    <string name="product_id">ProductId</string>
    <string name="user_inventory">UserInventory</string>
    <string name="subdivision_key">SubList</string>
    <string name="seller_name_key">SellersNameKey</string>
    <string name="transaction_id_key">TransactionID</string>
    <string name="order_history_bit_key">OrderHistoryBitKey</string>
    <string name="location_key">LocationKey</string>
    <string name="welcome_message">Bienvenido</string>
    <string name="if_account_msg">Si ya tiene una cuenta</string>
    <string name="log_in">Entrar</string>
    <string name="if_new_msg">Si eres nuevo</string>
    <string name="sign_up">Registrate</string>
    <string name="email">Email:</string>
    <string name="name">Nombre de Agricultor o Negocio:</string>
    <string name="phone">Telefono:</string>
    <string name="password">Contraseña</string>
    <string name="re_enter_password">Reingrese la contraseña</string>
    <string name="server_error">Error del Servidor</string>
    <string name="all_must_be_filled_msg">Todo tiene que ser llenado.</string>
    <string name="incorrect_email_password">Email o contraseña incorrecta.</string>
    <string name="pass_must_match_msg">La contraseña tiene que ser igual.</string>
    <string name="email_exists">Email ya esta en uso.</string>
    <string name="add_product">Añadir Producto</string>
    <string name="view_profile">Ver Perfil</string>
    <string name="log_out">Salir</string>
    <string name="view_all_users">Ver Todo los Usuarios</string>
    <string name="see_all">Ver Todo</string>
    <string name="name_of_product">Nombre del Producto:</string>
    <string name="date_product_added">Fecha Añadida:</string>
    <string name="product_price">Precio:</string>
    <string name="product_amount">Cantidad:</string>
    <string name="dollar_sign">$</string>
    <string name="add">Añadir</string>
    <string name="edit_account">Editar Cuenta</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="delete_account">Eliminar Cuenta</string>
    <string name="view_inventory">Ver Inventario</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="cancel">Cancelar</string>
    <string name="edit_product">Editar Producto</string>
    <string name="seller">Vendedor:</string>
    <string name="delete">Eliminar</string>
    <string name="user_rating">Rating:</string>
    <string name="location_update">Actualizar Localizacion</string>
    <string name="view_location">Ver Localizacion</string>
    <string name="view_seller_info">Ver Vendedor</string>
    <string name="search">Buscar</string>
    <string name="no_results_found_msg">No se encontraron resultados.</string>
    <string name="theres_nothing_here_msg">No hay nada aqui.</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="are_you_sure_msg">Seguro que quieres borrar esto?</string>
    <string name="confirm">Si</string>
    <string name="edit_password">Cambiar la contraseña</string>
    <string name="new_password">Contraseña Nueva</string>
    <string name="amount_available">Cantidad disponible:</string>
    <string name="amount_to_pay">Cantidad a pagar:</string>
    <string name="ok">OK</string>
    <string name="direct_pay">Pago En Efectivo</string>
    <string name="buy_product">Comprar</string>
    <string name="recall">Devolver</string>
    <string name="amount_purchased">Cantidad comprada:</string>
    <string name="amount_paid">Cantidad Pagada:</string>
    <string name="date_of_purchase">Fecha de la compra:</string>
    <string name="order_history">Historial de Ordenes</string>
    <string name="selling_history">Historial de Ventas</string>
    <string name="no_amount_was_given_warning">Cantidad a comprar no puede ser 0</string>
    <string name="purchase_successful">La compra fue exitosa.</string>
    <string name="purchase_failed">La compra no pudo ser completada.</string>
    <string name="order_number_msg">Orden #</string>
    <string name="return_to_main_page">Volver a página de inicio</string>
    <string name="try_again">Intentar denuevo</string>
    <string name="total_paid">Total:</string>
    <string name="buyer_paid">Se pagó</string>
    <string name="direct_pay_method_KEY">DirectPay</string>
    <string name="ATH_movil_pay_method_KEY">ATHMovil</string>
    <string name="order_is_paid_KEY">Paid</string>
    <string name="order_is_cancelled_KEY">Cancelled</string>
    <string name="order_pending_KEY">Pending</string>
    <string name="order_is_paid">Orden pagada</string>
    <string name="order_is_cancelled">Orden cancelada</string>
    <string name="order_pending">Orden pendiente</string>
    <string name="recall_title">Devolver orden</string>
    <string name="date_title">Fecha:</string>
    <string name="amount_to_recall">Cantidad a devolver:</string>
    <string name="reason_for_recall">Razón para la devolución:</string>
    <string name="submit">Enviar</string>
    <string name="contact_us_title">Contactanos</string>
    <string name="FIDA_title">FIDA</string>
    <string name="FIDA_email">fidagobierno@gmail.com</string>
    <string name="FIDA_telephone">Tel. : (787) 304-5350</string>
    <string name="FIDA_Physical_Address">Direcion Fisica\nEdificio Tres Río, Piso 5\nAve. Martínez Nadal\nEsq. Gonzáles Giusti\r\nGuaynabo</string>
    <string name="FIDA_Correspond">Dirección Postal\nPO Box 9100-0163\nSan Juan, PR 00908-0163</string>
    <string name="ADEA_title">ADEA</string>
    <string name="ADEA_email">gmail.com</string>
    <string name="ADEA_telephone">Tel. (787) 304-5350</string>
    <string name="ADEA_Physical_Address">Direcion Fisica\nEdificio Tres Río, Piso 5\nAve. Martínez Nadal\nEsq. Gonzáles Giusti\r\nGuaynabo</string>
    <string name="ADEA_Corrsponds">Dirección Postal\nPO Box 9100-0163\nSan Juan, PR 00908-0163</string>
    <string name="ADT_title">Autoridad de Tierra</string>
    <string name="ADT_email">gmail.com</string>
    <string name="ADT_telephone">Tel. (787) 723-9090</string>
    <string name="ADT_Physical_Address">Dirección Física\nAve. Fernández Juncos #1311\nSanturce</string>
    <string name="ADT_Corresponds">Dirección Postal \nBox 9745 \nSan Juan, PR00908-9745</string>
    <string name="fruit">Frutas</string>
    <string name="meat">Carnes</string>
    <string name="grain">Grano</string>
    <string name="dairy">Lacteos</string>
    <string name="poultry">Avicola</string>
    <string name="vegetable">Hortalizas</string>
    <string name="farinaceous">Farinaceos</string>
    <string name="apiary">Apicultura</string>
    <string name="hay">Heno</string>
    <string name="animal">Animal</string>
    <string-array name="product_list">
        <item>Carnes</item>
        <item>Avicola</item>
        <item>Frutas</item>
        <item>Lacteos</item>
        <item>Hortalizas</item>
        <item>Grano</item>
        <item>Farináceos</item>
    </string-array>
    <string-array name="price_amount_list">
        <item>c/u</item>
        <item>/oz</item>
        <item>/lb</item>
        <item>/almud</item>
        <item>/caja</item>
        <item>/saco</item>
        <item>/quintal</item>
        <item>/tonelada</item>
    </string-array>
    <string-array name="amount_list">
        <item>unidad(es)</item>
        <item>oz</item>
        <item>lb(s)</item>
        <item>almud(es)</item>
        <item>caja(s)</item>
        <item>saco(s)</item>
        <item>quintal(es)</item>
        <item>tonelada(s)</item>
    </string-array>
    <string-array name="fruit_list">
        <item>Acerola</item>
        <item>Aguacate</item>
        <item>Cantaloupe</item>
        <item>China</item>
        <item>Coco</item>
        <item>Guama</item>
        <item>Guanábanas</item>
        <item>Guineo</item>
        <item>Honey Dew</item>
        <item>Limón</item>
        <item>Mango</item>
        <item>Melón/Sandia</item>
        <item>Nispero</item>
        <item>Papaya</item>
        <item>Parcha</item>
        <item>Piña</item>
        <item>Quenepas</item>
        <item>Rambután</item>
        <item>Tamarindo</item>
        <item>Toronja</item>
        <item>Otros</item>

    </string-array>
    <string-array name="dairy_list">

        <item>Leche</item>
        <item>Queso</item>
        <item>Yogurt</item>
        <item>Otro</item>

    </string-array>
    <string-array name="poultry_list">

        <item>Codorniz</item>
        <item>Guinea</item>
        <item>Huevo</item>
        <item>Pollo</item>
        <item>Ponedora</item>
        <item>Otros</item>

    </string-array>
    <string-array name="vegetable_list">

        <item>Ají Dulce</item>
        <item>Albaca</item>
        <item>Aromáticos</item>
        <item>Berenjenas</item>
        <item>Berro</item>
        <item>Calabaza</item>
        <item>Cebolla</item>
        <item>Chayote</item>
        <item>Cilantrillo</item>
        <item>Espinaca</item>
        <item>Gandules</item>
        <item>Habicuelas</item>
        <item>Jengibre</item>
        <item>Lechuga</item>
        <item>Maíz</item>
        <item>Menta</item>
        <item>Pepinillo</item>
        <item>Pimiento Morrón</item>
        <item>Pimiento</item>
        <item>Plátano Maduro</item>
        <item>Quimbombó</item>
        <item>Recao</item>
        <item>Repollo</item>
        <item>Romero</item>
        <item>Tomate</item>
        <item>Yerba Buena</item>
        <item>Otro</item>

    </string-array>
    <string-array name="grain_list">

        <item>Café</item>
        <item>Otros</item>

    </string-array>
    <string-array name="apiculture_list">

        <item>Miel</item>
        <item>Servicios de Apicultura</item>
        <item>Otros</item>

    </string-array>
    <string-array name="meat_list">

        <item>Cerdo</item>
        <item>Conejo</item>
        <item>Peces</item>
        <item>Pollo</item>
        <item>Res/Ternera</item>
        <item>Otros</item>

    </string-array>
    <string-array name="farinaceous_list">

        <item>Apio</item>
        <item>Batata</item>
        <item>Guineos</item>
        <item>Malanga</item>
        <item>Ñame</item>
        <item>Pana Pen</item>
        <item>Yautía</item>
        <item>Yuca</item>
        <item>Otros</item>

    </string-array>
    <string name="user_email_key">UserEmailKey</string>
    <string name="user_phone_key">UserPhoneKey</string>
    <string name="user_rating_key">UserRatingKey</string>
    <string name="user_inventory_key">UserInventoryKey</string>
    <string name="title_activity_maps">Map</string>
</resources>