<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <!--  View Profile -->
    <item android:id="@+id/action_view_profile"
        android:icon="@drawable/ic_action_person"
        android:title="@string/view_profile"
        app:showAsAction="ifRoom"
        />


    <!-- Add Product -->
    <item android:id="@+id/action_add_product"
        android:title="@string/add_product"
        app:showAsAction="never"
        />

    <!-- Change language -->
    <item android:id="@+id/action_change_language"
        android:title="@string/change_language"
        app:showAsAction="never"
        />

    <!-- Log out -->
    <item android:id="@+id/action_log_out"
        android:title="@string/log_out"
        app:showAsAction="never"
        />


</menu>