<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.gretchen.agrodata.activities.ContactUs">

        <TextView
            android:id="@+id/CU_ADT_text_Textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="0dp"
            android:text="@string/ADT_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/CU_ADT_tel_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/ADT_telephone"
            app:layout_constraintLeft_toLeftOf="@+id/CU_ADT_text_Textview"
            app:layout_constraintTop_toBottomOf="@+id/CU_ADT_text_Textview" />

        <TextView
            android:id="@+id/CU_ADT_email_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/ADT_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/CU_ADT_tel_TextView"
            app:layout_constraintTop_toBottomOf="@+id/CU_ADT_tel_TextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/CU_AEDA_text_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="0dp"
            android:text="@string/ADEA_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/ADEA_Img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ADEA_Img" />

        <TextView
            android:id="@+id/CU_AEDA_tel_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/ADEA_telephone"
            app:layout_constraintLeft_toLeftOf="@+id/CU_AEDA_text_TextView"
            app:layout_constraintTop_toBottomOf="@+id/CU_AEDA_text_TextView" />

        <TextView
            android:id="@+id/CU_AEDA_email_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/ADEA_email"
            app:layout_constraintLeft_toLeftOf="@+id/CU_AEDA_tel_TextView"
            app:layout_constraintTop_toBottomOf="@+id/CU_AEDA_tel_TextView" />

        <TextView
            android:id="@+id/CU_FIDA_text_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="0dp"
            android:text="@string/FIDA_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/FIDA_Img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/FIDA_Img" />

        <TextView
            android:id="@+id/CU_FIDA_email_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="112dp"
            android:layout_marginTop="8dp"
            android:text="@string/FIDA_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/CU_FIDA_tel_TextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CU_FIDA_tel_TextView" />

        <TextView
            android:id="@+id/CU_FIDA_tel_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="8dp"
            android:text="@string/FIDA_telephone"
            app:layout_constraintLeft_toLeftOf="@+id/CU_FIDA_text_TextView"
            app:layout_constraintTop_toBottomOf="@+id/CU_FIDA_text_TextView" />

        <ImageView
            android:id="@+id/FIDA_Img"
            android:layout_width="97dp"
            android:layout_height="84dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/FIDA_title"
            android:src="@drawable/fida_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/ADEA_Img"
            android:layout_width="101dp"
            android:layout_height="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/ADEA_title"
            android:src="@drawable/adea_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FIDA_Img" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contact_us_title"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="101dp"
            android:layout_height="99dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/ADT_title"
            android:src="@drawable/atpr_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ADEA_Img" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>