<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_pattern_transparent_smaller"
        tools:context="com.example.gretchen.agrodata.activities.RecallPage">


        <TextView
            android:id="@+id/RP_date_title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/date_title"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RP_recall_title_TextView" />

        <TextView
            android:id="@+id/RP_recall_title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recall_title"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/RP_date_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/RP_date_title_TextView"
            app:layout_constraintLeft_toRightOf="@+id/RP_date_title_TextView"
            app:layout_constraintTop_toTopOf="@+id/RP_date_title_TextView" />

        <TextView
            android:id="@+id/RP_amount_to_recall_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/amount_to_recall"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RP_date_title_TextView" />

        <EditText
            android:id="@+id/RP_amount_EditText"
            android:layout_width="104dp"
            android:layout_height="39dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/RP_amount_to_recall_TextView"
            app:layout_constraintLeft_toRightOf="@+id/RP_amount_to_recall_TextView"
            app:layout_constraintTop_toTopOf="@+id/RP_amount_to_recall_TextView" />

        <TextView
            android:id="@+id/RP_reason_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/reason_for_recall"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RP_amount_to_recall_TextView"
            android:layout_marginStart="8dp" />

        <EditText
            android:id="@+id/RP_reason_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RP_reason_TextView"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:id="@+id/RP_submit_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:onClick="submitRecall"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RP_reason_EditText"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>